--- a/src/ArrayState.module.css
+++ b/src/ArrayState.module.css
@@ -1,3 +1,29 @@
 .fruitType {
-    margin-right: 20px;
+
+    margin-left: 20px;
+    margin-bottom: 5px;
+    padding: 5px;
+    border-radius: 5px;
+    border: "none";
+    background-color: lightslategray;
+
+}
+
+
+.flexFruitRow {
+
+    width:250px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+.inputAddFruit {
+   
+    margin-top: 20px;
+}
+
+.btnAddFruit {
+    margin-left: 10px
 }
